tests/fails/f3.t
terra foo()
    var a : tuple(int)
    return a._1
end
foo()